--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <script>
          
         function weather() {
-            const link = 'http://api.weatherapi.com/v1/current.json?key=a7e49be1bd3643af8b7173202210502&q=';
+            const link = 'https://api.weatherapi.com/v1/current.json?key=a7e49be1bd3643af8b7173202210502&q=';
             let inputData = document.getElementById('input').value;
             let link2 = inputData;
             let linkfinal = link + link2;
